--- a/navbar.html
+++ b/navbar.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <img id="banniere" src="banniere_16.png">
+    <img id="banniere" src="img/banniere_16.png">
 
     <!-- Création de la barre de navigation avec une liste et une sous liste -->
     <nav>
